test/runnable/weird.nt
module weird;

extern(C) void assert(int);

void main() {
    int foo() { return return 2; }
    assert(foo == 2);
    int bar() {
        while (true) return break;
        return 3;
    }
    assert(bar == 3);
}
