test/fail_compilation/abstract.nt
module abstract;

extern(C) void assert(int);

abstract class A
{
    abstract void foo() { assert(false); }
}

class B : A
{
    this() { }
}

void main() { A a = new B; a.foo(); }
